# gc-ms-retention-time-prediction

./: .gitignore  EXPANSION_SUMMARY.md  GITHUB_SETUP.md  ML_IMPROVEMENTS.md  QUICK_START.md  README.md  README_BATCH_PROCESSING.md  pyproject.toml  report.md
knowledge/: column_conditions.csv  molecules_database.csv  user_preference.txt
src/Latest_Rt/: crew.py  main.py
src/Latest_Rt/config/: agents.yaml  tasks.yaml
src/Latest_Rt/tools/: __init__.py  batch_tools.py  ml_models.py  visualization_tools.py
