[project]
name = "latest_rt"
version = "0.1.0"
description = "latest-rt using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[anthropic,tools]==1.4.1",
]

[project.scripts]
latest_rt = "latest_rt.main:run"
run_crew = "latest_rt.main:run"
train = "latest_rt.main:train"
replay = "latest_rt.main:replay"
test = "latest_rt.main:test"
run_with_trigger = "latest_rt.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
